--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
     <link
       rel="stylesheet"
-      href="/style/weather-icons.min.css"
+      href="https://egesiapres.github.io/weather-app/style/weather-icons.min.css"
     />
 
     <link
       rel="stylesheet"
-      href="/style/weather-icons-wind.min.css"
+      href="https://egesiapres.github.io/weather-app/style/weather-icons-wind.min.css"
     />
 
     <link
@@ -384,8 +384,6 @@
             </div>
           </div>
         </section>
-
-        <!-- <hr class="m-0 bc-transparent" /> -->
 
         <footer class="container x-center">
           <div class="container y-center">
