--- a/index.html
+++ b/index.html
@@ -40,27 +40,24 @@
       <header class="container col-direction y-center rg-15 p-15">
         <form class="container x-center">
           <input
-            class="b-0 br-10 p-10 text-black"
+            class="b-0 br-10 p-10 text-white bg-transparent"
             type="text"
-            placeholder="Type your city name..."
+            placeholder="Search a city..."
             value=""
           />
 
           <button
-            class="b-0 br-10 p-10 text-black"
+            class="b-0 br-10 p-10 text-black hidden"
             id="search-btn"
-            type="button"
+            type="submit"
           >
             🔎 Search
           </button>
 
-          <!-- <button
-            class="p-10"
+          <button
+            class="b-0 br-10 p-10"
             type="button"
-            disabled
-          >
-            Your location
-          </button> -->
+          ></button>
         </form>
 
         <div
