fix search icon

--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
           <button
             class="b-0 br-10 p-10"
             type="button"
-          ></button>
+          >
+            <img src="https://egesiapres.github.io/weather-app/img/location.svg" />
+          </button>
         </form>
 
         <div
