fix search icon 2

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             class="b-0 br-10 p-10"
             type="button"
           >
-            <img src="https://egesiapres.github.io/weather-app/img/location.svg" />
+            My location            
           </button>
         </form>
 
