--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           </button>
 
           <button
-            class="b-0 br-10 p-10"
+            class="b-0 br-10 p-10 hidden"
             type="button"
           >
             My location            
