--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             class="b-0 br-10"
             type="button"
           >
-            <img src="img/location.svg" />
+            <img src="https://egesiapres.github.io/weather-app/img/location.svg" />
             <!-- My location             -->
           </button>
         </form>
