fix state and country fetching

--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
             class="b-0 br-10"
             type="button"
           >
-            <img src="https://egesiapres.github.io/weather-app/img/location.svg" />            
+            <img
+              src="https://egesiapres.github.io/weather-app/img/location.svg"
+            />
           </button>
         </form>
 
