improve 5 day forecast box

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
                 <p
                   id="temp-par"
-                  class="cg-15 m-0 text-big"
+                  class="cg-15 m-0 text-big text-center"
                 >
                   XX°C
                 </p>
@@ -213,38 +213,11 @@
               class="container scrollable"
             >
               <div class="container col-direction x-fit-content">
-                <p class="m-5 text-center">Today</p>
-
-                <div class="container x-center">
-                  <img
-                    id="today-weather-img"
-                    src="img/partly-cloudy-day.svg"
-                    class="small-img"
-                  />
-                </div>
-
-                <div class="container x-max-content">
-                  <p
-                    id="today-min-temp-par"
-                    class="m-5 text-extra-small"
-                  >
-                    L: XX°C
-                  </p>
-                  <p
-                    id="today-max-temp-par"
-                    class="m-5 text-extra-small"
-                  >
-                    M: XX°C
-                  </p>
-                </div>
-              </div>
-
-              <div class="container col-direction x-fit-content">
                 <p
                   id="day-one-name-par"
                   class="m-5 text-center"
                 >
-                  Day 1
+                  Tomorrow
                 </p>
 
                 <div class="container x-center">
@@ -255,20 +228,12 @@
                   />
                 </div>
 
-                <div class="container x-max-content">
-                  <p
-                    id="day-one-min-temp-par"
-                    class="m-5 text-extra-small"
-                  >
-                    L: XX°C
-                  </p>
-                  <p
-                    id="day-one-max-temp-par"
-                    class="m-5 text-extra-small"
-                  >
-                    H: XX°C
-                  </p>
-                </div>
+                <p
+                  id="day-one-lh-temps-par"
+                  class="m-5 text-extra-small text-center"
+                >
+                  XX - XX°C
+                </p>
               </div>
 
               <div class="container col-direction x-fit-content">
@@ -287,20 +252,12 @@
                   />
                 </div>
 
-                <div class="container x-max-content">
-                  <p
-                    id="day-two-min-temp-par"
-                    class="m-5 text-extra-small"
-                  >
-                    L: XX°C
-                  </p>
-                  <p
-                    id="day-two-max-temp-par"
-                    class="m-5 text-extra-small"
-                  >
-                    H: XX°C
-                  </p>
-                </div>
+                <p
+                  id="day-two-lh-temps-par"
+                  class="m-5 text-extra-small text-center"
+                >
+                  XX - XX°C
+                </p>
               </div>
 
               <div class="container col-direction x-fit-content">
@@ -319,20 +276,12 @@
                   />
                 </div>
 
-                <div class="container x-max-content">
-                  <p
-                    id="day-three-min-temp-par"
-                    class="m-5 text-extra-small"
-                  >
-                    L: XX°C
-                  </p>
-                  <p
-                    id="day-three-max-temp-par"
-                    class="m-5 text-extra-small"
-                  >
-                    H: XX°C
-                  </p>
-                </div>
+                <p
+                  id="day-three-lh-temps-par"
+                  class="m-5 text-extra-small text-center"
+                >
+                  XX - XX°C
+                </p>
               </div>
 
               <div class="container col-direction x-fit-content">
@@ -351,20 +300,12 @@
                   />
                 </div>
 
-                <div class="container x-max-content">
-                  <p
-                    id="day-four-min-temp-par"
-                    class="m-5 text-extra-small"
-                  >
-                    L: XX°C
-                  </p>
-                  <p
-                    id="day-four-max-temp-par"
-                    class="m-5 text-extra-small"
-                  >
-                    H: XX°C
-                  </p>
-                </div>
+                <p
+                  id="day-four-lh-temps-par"
+                  class="m-5 text-extra-small text-center"
+                >
+                  XX - XX°C
+                </p>
               </div>
 
               <div class="container col-direction x-fit-content">
@@ -383,20 +324,12 @@
                   />
                 </div>
 
-                <div class="container x-max-content">
-                  <p
-                    id="day-five-min-temp-par"
-                    class="m-5 text-extra-small"
-                  >
-                    L: XX°C
-                  </p>
-                  <p
-                    id="day-five-max-temp-par"
-                    class="m-5 text-extra-small"
-                  >
-                    H: XX°C
-                  </p>
-                </div>
+                <p
+                  id="day-five-lh-temps-par"
+                  class="m-5 text-extra-small text-center"
+                >
+                  XX - XX°C
+                </p>
               </div>
             </div>
           </div>
