add date day in forecast box

--- a/index.html
+++ b/index.html
@@ -213,120 +213,160 @@
               class="container scrollable"
             >
               <div class="container col-direction x-fit-content">
-                <p
-                  id="day-one-name-par"
-                  class="m-5 text-center"
-                >
-                  Tomorrow
-                </p>
+                <div class="container col-direction rg-5 m-5">
+                  <p
+                    id="day-one-name-par"
+                    class="m-0 text-center"
+                  >
+                    Tomorrow
+                  </p>
+                  <p
+                    id="day-one-date-par"
+                    class="m-0 text-extra-small text-center"
+                  >
+                    XX Month
+                  </p>
+                </div>
 
                 <div class="container x-center">
                   <img
                     id="day-one-weather-img"
                     src="img/partly-cloudy-day.svg"
-                    class="small-img"
+                    class="img-small"
                   />
                 </div>
 
                 <p
                   id="day-one-lh-temps-par"
-                  class="m-5 text-extra-small text-center"
+                  class="m-5 text-small text-center"
                 >
                   XX - XX°C
                 </p>
               </div>
 
               <div class="container col-direction x-fit-content">
-                <p
-                  id="day-two-name-par"
-                  class="m-5 text-center"
-                >
-                  Day 2
-                </p>
+                <div class="container col-direction rg-5 m-5">
+                  <p
+                    id="day-two-name-par"
+                    class="m-0 text-center"
+                  >
+                    Day 2
+                  </p>
+                  <p
+                    id="day-two-date-par"
+                    class="m-0 text-extra-small text-center"
+                  >
+                    XX Month
+                  </p>
+                </div>
 
                 <div class="container x-center">
                   <img
                     id="day-two-weather-img"
                     src="img/partly-cloudy-day.svg"
-                    class="small-img"
+                    class="img-small"
                   />
                 </div>
 
                 <p
                   id="day-two-lh-temps-par"
-                  class="m-5 text-extra-small text-center"
+                  class="m-5 text-small text-center"
                 >
                   XX - XX°C
                 </p>
               </div>
 
               <div class="container col-direction x-fit-content">
-                <p
-                  id="day-three-name-par"
-                  class="m-5 text-center"
-                >
-                  Day 3
-                </p>
+                <div class="container col-direction rg-5 m-5">
+                  <p
+                    id="day-three-name-par"
+                    class="m-0 text-center"
+                  >
+                    Day 3
+                  </p>
+                  <p
+                    id="day-three-date-par"
+                    class="m-0 text-extra-small text-center"
+                  >
+                    XX Month
+                  </p>
+                </div>
 
                 <div class="container x-center">
                   <img
                     id="day-three-weather-img"
                     src="img/partly-cloudy-day.svg"
-                    class="small-img"
+                    class="img-small"
                   />
                 </div>
 
                 <p
                   id="day-three-lh-temps-par"
-                  class="m-5 text-extra-small text-center"
+                  class="m-5 text-small text-center"
                 >
                   XX - XX°C
                 </p>
               </div>
 
               <div class="container col-direction x-fit-content">
-                <p
-                  id="day-four-name-par"
-                  class="m-5 text-center"
-                >
-                  Day 4
-                </p>
+                <div class="container col-direction rg-5 m-5">
+                  <p
+                    id="day-four-name-par"
+                    class="m-0 text-center"
+                  >
+                    Day 4
+                  </p>
+                  <p
+                    id="day-four-date-par"
+                    class="m-0 text-extra-small text-center"
+                  >
+                    XX Month
+                  </p>
+                </div>
 
                 <div class="container x-center">
                   <img
                     id="day-four-weather-img"
                     src="img/partly-cloudy-day.svg"
-                    class="small-img"
+                    class="img-small"
                   />
                 </div>
 
                 <p
                   id="day-four-lh-temps-par"
-                  class="m-5 text-extra-small text-center"
+                  class="m-5 text-small text-center"
                 >
                   XX - XX°C
                 </p>
               </div>
 
               <div class="container col-direction x-fit-content">
-                <p
-                  id="day-five-name-par"
-                  class="m-5 text-center"
-                >
-                  Day 5
-                </p>
+                <div class="container col-direction rg-5 m-5">
+                  <p
+                    id="day-five-name-par"
+                    class="m-0 text-center"
+                  >
+                    Day 5
+                  </p>
+                  <p
+                    id="day-five-date-par"
+                    class="m-0 text-extra-small text-center"
+                  >
+                    XX Month
+                  </p>
+                </div>
 
                 <div class="container x-center">
                   <img
                     id="day-five-weather-img"
                     src="img/partly-cloudy-day.svg"
-                    class="small-img"
+                    class="img-small"
                   />
                 </div>
 
                 <p
                   id="day-five-lh-temps-par"
-                  class="m-5 text-extra-small text-center"
+                  class="m-5 text-small text-center"
                 >
                   XX - XX°C
                 </p>
