improving current location button hover effect

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
             class="b-0 br-10"
             type="button"
           >
-            <img
+            <!-- <img
               src="https://egesiapres.github.io/weather-app/img/location.svg"
-            />
+            /> -->
           </button>
         </form>
 
@@ -578,7 +578,7 @@
           <a
             href="#air-div"
             class="m-0 text-small text-transparent"
-            ><i class="wi wi-direction-down m-10 text-transparent"></i>Scroll</a
+            ><i class="wi wi-direction-down m-10 ml-0 text-transparent"></i>Scroll</a
           >
         </footer>
       </div>
