improve current location button hover effect and remove useless icons

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
           <button
             id="current-location-btn"
-            class="b-0 br-10"
+            class="b-0 br-10 inactive"
             type="button"
           >
             <!-- <img
