add current date and time

--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
               class="container col-direction"
             >
               <p
+                id="today-date-par"
+                class="m-5 text-center"
+              >Month XX, hh:mm</p>              
+              <p
                 id="name-par"
                 class="text-medium text-center"
               >
@@ -224,7 +228,7 @@
                     id="day-one-date-par"
                     class="m-0 text-extra-small text-center"
                   >
-                    XX Month
+                    Month XX
                   </p>
                 </div>
 
@@ -256,7 +260,7 @@
                     id="day-two-date-par"
                     class="m-0 text-extra-small text-center"
                   >
-                    XX Month
+                    Month XX
                   </p>
                 </div>
 
@@ -288,7 +292,7 @@
                     id="day-three-date-par"
                     class="m-0 text-extra-small text-center"
                   >
-                    XX Month
+                    Month XX
                   </p>
                 </div>
 
@@ -320,7 +324,7 @@
                     id="day-four-date-par"
                     class="m-0 text-extra-small text-center"
                   >
-                    XX Month
+                    Month XX
                   </p>
                 </div>
 
@@ -352,7 +356,7 @@
                     id="day-five-date-par"
                     class="m-0 text-extra-small text-center"
                   >
-                    XX Month
+                    Month XX
                   </p>
                 </div>
 
@@ -578,7 +582,8 @@
           <a
             href="#air-div"
             class="m-0 text-small text-transparent"
-            ><i class="wi wi-direction-down m-10 ml-0 text-transparent"></i>Scroll</a
+            ><i class="wi wi-direction-down m-10 ml-0 text-transparent"></i
+            >Scroll</a
           >
         </footer>
       </div>
